# CS224R-final-project

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: smoke.json  tier1.json
docs/: experiments.md
scripts/: create_wandb_modal_secret.sh  pretrain_bc.sh  run_smoke.sh  run_tier1_local.sh  summarize_results.sh
src/rl_sequencing/: __init__.py
src/rl_sequencing/analysis/: diagnostics.py  plot_iql_results.py  plot_modal_comparison.py  plot_online_handoff_bundle.py  summarize_baselines.py  summarize_offline_warmstarts.py  summarize_online_handoffs.py  summarize_ppo_to_sac.py  summarize_reverse_handoffs.py
src/rl_sequencing/data/: demos.py
src/rl_sequencing/handoffs/: utils.py
src/rl_sequencing/modal/: offline_warmstarts.py  online_handoffs.py  ppo_to_sac.py
src/rl_sequencing/offline/: awac.py  bc.py  iql.py
src/rl_sequencing/tools/: check_starter_compatibility.py  run_iql_local.py
src/rl_sequencing/trainers/: ppo.py  ppo_to_sac.py  sac.py  sac_to_ppo.py
tests/: conftest.py  test_handoff_utils.py  test_summarize_online_handoffs.py
